tests/paczka2/big_fuzzy/46240601.err
Error in line 1: A396 A396 52,4
Error in line 3: A396 S678 30,5
Error in line 9: FQ3mIh S678 15,5
Error in line 11: FQ3mIh A377 66,3
Error in line 21: L3tzFHSJYV A396 47,3
Error in line 18: A396 S678 49,6
Error in line 23: qbcT A396 49,4
Error in line 15: FQ3mIh S90 83,4
Error in line 28: qbcT A377 6,4
Error in line 40: e8y9323YH A396 81,6
Error in line 45: A396 A377 258,19
Error in line 46: VvVcD5oyD A377 246,41
Error in line 44: GcZ0 A377 49,2
Error in line 52: e8y9323YH S678 95,3
Error in line 60: L3tzFHSJYV S678 13,9
Error in line 39: VvVcD5oyD A377 77,4
Error in line 72: A396 A377 72,8
Error in line 81: VvVcD5oyD S90 42,6
Error in line 83: FQ3mIh A396 24,4
Error in line 87: VvVcD5oyD S678 97,9
Error in line 91: GcZ0 S90 56,6
Error in line 100: qbcT S`78 `7,4
Error in line 106: qbcT S678 37,1
Error in line 110: qbcT A396 97,1
Error in line 117: FQ3mIh A377 20,4
Error in line 113: A396 A396 81,8
Error in line 122: A396 S678 30,2
Error in line 125: A396 A377 10,3
Error in line 129: e8y9323YH S678 39,0
Error in line 150: GcZ0 S90 69,5
Error in line 153: GcZ0 S678 8,2
Error in line 161: e8y9323YH S678 89,9
Error in line 178: GcZ0 A377 9,2
Error in line 157: VvVcD5oyD S90 32,3
Error in line 183: GcZ0 A396 41,0
Error in line 187: GcZ0 S90 62,1
Error in line 186: A396 S90 3,9
Error in line 207: A396 S90 18,3
Error in line 208: A396 S678 19,6
Error in line 192: GcZ0 A396 41,7
Error in line 214: VvVcD5oyD S90 98,4
Error in line 212: A396 A396 185,6
Error in line 218: A396 S90 79,4
Error in line 220: e8y9323YH S90 33,1
Error in line 221: A396 A396 71,4
Error in line 234: VvVcD5oyD A396 98,2
Error in line 222: FQ3mIh S90 10,1
Error in line 238: A396 S90 52,4
Error in line 239: A396 S678 14,9
Error in line 243: A396 A396 2,2
